# s15

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
nginx/: webapp.conf
src/: Dockerfile  requirements.txt
src/domain/: __init__.py  admin.py  apps.py  middleware.py  models.py
src/domain/migrations/: 0002_auto_20201002_1941.py  0003_site_landing_page.py  0004_auto_20230123_1658.py
src/page/: admin.py  models.py  views.py
src/page/migrations/: 0001_initial.py  0002_auto_20200923_2034.py
src/panel/: middleware.py  urls.py  views.py
src/panel/locale/pl/LC_MESSAGES/: django.po
src/panel/static/css/: easymde.min.css
src/panel/static/js/: easymde.min.js
src/panel/static/scss/: sb-admin-2.css.map
src/panel/templates/panel/: dashboard.html  login.html  page-delete.html  page-update.html  pages.html  theme.html  themes.html
src/s15/: asgi.py  settings.py  urls.py  wsgi.py
src/themes/: context_processors.py  forms.py  models.py
src/themes/migrations/: 0001_initial.py
webapp/: manage.py
webapp/domain/: admin.py  middleware.py  models.py  signals.py
webapp/domain/migrations/: 0001_initial.py
webapp/page/: models.py
webapp/panel/: views.py
webapp/panel/static/js/: easymde.min.js
webapp/panel/static/scss/: sb-admin-2.css
webapp/panel/templates/panel/: dashboard.html  index.html  page-update.html  theme-settings.html
webapp/s15/: settings.py  urls.py
webapp/themes/: admin.py  context_processors.py  forms.py  types.py  utils.py
(+13 files in other folders)
