[tool.poetry]
name = "s15"
version = "0.1.0"
description = "Dead simple CMS that your mom can handle"
authors = ["Tomasz Karbownicki <tomasz@karbownicki.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.0.7"
Markdown = "3.2.1"
dacite = "1.7.0"
daphne = "2.5.0"
django-environ = "0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
